[gd_scene load_steps=9 format=3 uid="uid://cg7515vc8s7pl"]

[ext_resource type="Texture2D" uid="uid://dcixvclrsolkx" path="res://Src/Character/Character.png" id="1_8v5v5"]
[ext_resource type="Script" uid="uid://dcgwjnswi5gcj" path="res://Src/Character/player.gd" id="1_pf84p"]

[sub_resource type="Animation" id="Animation_62h7s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pf84p"]
resource_name = "idle"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_o7d3v"]
resource_name = "jump"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_4fkxx"]
resource_name = "walk"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hx7db"]
_data = {
&"RESET": SubResource("Animation_62h7s"),
&"idle": SubResource("Animation_pf84p"),
&"jump": SubResource("Animation_o7d3v"),
&"walk": SubResource("Animation_4fkxx")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pf84p"]
height = 24.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_pf84p")
jump_height = 42.0
jump_time_to_peak = 0.3
jump_time_to_descent = 0.5

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_8v5v5")
hframes = 9
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hx7db")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_pf84p")

[node name="Camera2D" type="Camera2D" parent="."]
limit_bottom = 300

[node name="coyote_time" type="Timer" parent="."]
one_shot = true

[node name="jump_buffer_timer" type="Timer" parent="."]

[connection signal="timeout" from="coyote_time" to="." method="_on_coyote_time_timeout"]
[connection signal="timeout" from="jump_buffer_timer" to="." method="_on_jump_buffer_timer_timeout"]
